fix gap between tiles on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -84,4 +84,10 @@
     max-width: 100%;
     box-sizing: border-box;
   }
+
+  #board>div {
+    height: 100%;
+    width: 100%;
+    display: flex;
+  }
 }
